--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,31 +1,55 @@
-<%- include ('partials/header') %> 
+<%- include ('partials/header') %>
 <form>
-    <h2>Sign up</h2>
-    <label for="email">Email</label>
-    <input type="text" name="email" required>
-    <div class="error email"></div>
+  <h2>Sign up</h2>
+  <label for="email">Email</label>
+  <input type="text" name="email" required />
+  <div class="error email"></div>
 
-    <label for="password">Password</label>
-    <input type="password" name="password" required>
-    <div class="error password"></div>
+  <label for="password">Password</label>
+  <input type="password" name="password" required />
+  <div class="error password"></div>
 
-    <button>Sign up</button>
+  <button>Sign up</button>
 </form>
 
-
-
+<%- include ('partials/footer') %>
 
 <script>
-    const form = document.querySelector('form');
+  const form = document.querySelector("form");
+  const emailError = document.querySelector(".email.error");
+  const passwordError = document.querySelector(".password.error");
 
-    form.addEventListener('submit',(e) =>{ 
-        e.preventDefault();
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-        // get the values
-        const email = form.email.value
-        const password = form.password.value
+    // reset errores
+    emailError.textContent = "";
+    passwordError.textContent = "";
 
-        console.log(email, password);
-    })
+    // get the values
+    const email = form.email.value;
+    const password = form.password.value;
+
+    // console.log(email, password);
+    try {
+      const res = await fetch("/signup", {
+        method: "POST",
+        body: JSON.stringify({ email, password }),
+        headers: { "Content-Type": "application/json" },
+      });
+      const data = await res.json();
+      console.log(data);
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
+      }
+
+      //   redirce from frontend.
+      if (data.user) {
+        location.assign("/");
+      }
+    } catch (err) {
+      console.log(err);
+    }
+  });
 </script>
-<%- include ('partials/footer') %> 
