--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include ('partials/header') %> 
+<%- include ('partials/header') %>
 <form>
     <h2>Login</h2>
     <label for="email">Email</label>
@@ -17,15 +17,46 @@
 
 <script>
     const form = document.querySelector('form');
+    const emailError = document.querySelector(".email.error");
+    const passwordError = document.querySelector(".password.error");
 
-    form.addEventListener('submit',(e) =>{ 
+    form.addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        // get the values
-        const email = form.email.value
-        const password = form.password.value
+        // reset errores
+        emailError.textContent = "";
+        passwordError.textContent = "";
 
-        console.log(email, password);
+        // get the values
+        const email = form.email.value;
+        const password = form.password.value;
+
+        // console.log(email, password);
+        try {
+            const res = await fetch("/login", {
+                method: "POST",
+                body: JSON.stringify({
+                    email,
+                    password
+                }),
+                headers: {
+                    "Content-Type": "application/json"
+                },
+            });
+            const data = await res.json();
+            console.log(data);
+            if (data.errors) {
+                emailError.textContent = data.errors.email;
+                passwordError.textContent = data.errors.password;
+            }
+
+            //   redirce from frontend.
+            if (data.user) {
+                // location.assign("/");
+            }
+        } catch (err) {
+            console.log(err);
+        }
     })
 </script>
-<%- include ('partials/footer') %> 
+<%- include ('partials/footer') %>
